# Synapse

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  package-lock.json  package.json  vitest.config.ts
crates/spanda-api/: Cargo.toml
crates/spanda-api/src/: audit_log.rs  e3.rs  e4.rs  entity_mutations.rs  entity_runtime.rs  entity_traceability.rs  grpc.rs  handlers.rs  hri.rs  humans.rs  lib.rs  observability.rs  openapi_routes.rs  program.rs  sdk_ops.rs  server.rs  slo_burn_scheduler.rs  smart_spaces.rs  state.rs  ws.rs
crates/spanda-api/tests/: api_policy_tests.rs  entity_runtime_tests.rs  grpc_live_probe.rs  grpc_tests.rs  hri_session_tests.rs  humans_api_tests.rs  ota_execute_live.rs  slo_burn_scheduler_test.rs  smart_spaces_api_tests.rs
crates/spanda-assurance/: Cargo.toml
crates/spanda-assurance/src/: analyze.rs  anomaly.rs  continuity.rs  diagnosis.rs  evidence.rs  knowledge.rs  lib.rs  mission.rs  mitigation.rs  modes.rs  prognostics.rs  recovery.rs  report.rs  resilience.rs  state.rs  types.rs
crates/spanda-assurance/tests/: assurance_tests.rs  recovery_tests.rs
crates/spanda-bridge/: Cargo.toml  build.rs
crates/spanda-bridge/src/: cpp.rs  cpp_native.rs  lib.rs  protocol.rs  python.rs  python_native.rs
crates/spanda-cli/: Cargo.toml  README.md
crates/spanda-cli/bundled-registry/: index.json
crates/spanda-cli/src/: assurance_cli.rs  bundled_registry.rs  compliance_cli.rs  config_cli.rs  config_load.rs  control_center_cli.rs  control_center_client.rs  demo_cli.rs  deploy_ota.rs  device_cli.rs  device_tree_cli.rs  drift_cli.rs  entity_cli.rs  generate_cli.rs  integrity_cli.rs  main.rs  package.rs  readiness_cli.rs  runtime_hooks.rs  score_cli.rs  swarm_cli.rs  tamper_cli.rs  telemetry_cli.rs  threat_model_cli.rs  trace_cli.rs
crates/spanda-cli/tests/: continuity_cli.rs  control_center_cli.rs
crates/spanda-cli/wix/: main.wxs
crates/spanda-compliance/: Cargo.toml
crates/spanda-compliance/src/: accreditation.rs  lib.rs
crates/spanda-compliance/tests/: compliance_tests.rs
crates/spanda-config/: Cargo.toml
crates/spanda-config/src/: device_config_persist.rs  device_failover.rs  device_health.rs  device_identity.rs  device_operations.rs  device_pool.rs  device_quarantine.rs  device_reports.rs  device_tree.rs  discovery_live.rs  discovery_transport.rs  drift.rs  entity.rs  facility.rs  human_entities.rs  integration.rs  lib.rs  manifest.rs  mission_approval.rs  provisioning.rs  reports.rs  resolved.rs  resolver.rs  system_context.rs
crates/spanda-config/tests/: config_tests.rs  device_pool_scale.rs  device_pool_tests.rs  entity_tests.rs  failover_drill.rs
crates/spanda-connectivity-runtime/: Cargo.toml
crates/spanda-connectivity-runtime/src/: connectivity_validate.rs  lib.rs
crates/spanda-core/: Cargo.toml  README.md  build.rs
crates/spanda-core/src/: adapter_bridge.rs  ai.rs  ast.rs  certify_prover.rs  certify_runtime.rs  certify_verify.rs  codegen.rs  comm.rs  concurrency.rs  connectivity_positioning.rs  debug.rs  debug_session.rs  deploy_agent.rs  deploy_bundle.rs  deploy_http.rs  deploy_remote.rs  deploy_service.rs  docs.rs  error.rs  events.rs  ffi.rs  ffi_registry.rs  fleet_orchestrator.rs  format.rs  foundations.rs  hal.rs  hardware.rs  hardware_monitor.rs  language_reference.rs  lexer.rs  lib.rs  lib_registry.rs  lint.rs  modules.rs  nav2_adapter.rs  parser.rs  pretty.rs  providers.rs  regex_lang.rs  reliability.rs  (+36 more)
crates/spanda-core/tests/: certify_runtime.rs  certify_verify.rs  communication.rs  connectivity_positioning.rs  deploy_bundle.rs  deploy_ota.rs  deploy_remote.rs  enum_values.rs  fleet_mesh.rs  fleet_orchestrator.rs  foundations.rs  hardware_compat.rs  integration.rs  lean_core_shims.rs  modules_result.rs  p1_features.rs  p2_tooling.rs  p3_features.rs  phase29_verification.rs  phase31_gaps.rs  phase32_gaps.rs  phase35_gaps.rs  providers_lean_core.rs  providers_runtime.rs  realtime_regex.rs  robotics_platform.rs  runtime_hardening.rs  runtime_smoke.rs  security_comm.rs  stdlib_security.rs  struct_literals.rs  swarm_mesh.rs  trait_impl.rs  trait_objects.rs  transport_rclrs.rs  twin_replay.rs  type_system.rs
crates/spanda-dap/: Cargo.toml  README.md
crates/spanda-dap/src/: main.rs
crates/spanda-driver/: Cargo.toml  README.md
crates/spanda-driver/src/: compile.rs  lib.rs  recovery_run.rs  run.rs  verify.rs
crates/spanda-driver/tests/: pipeline_bench.rs  smoke.rs
crates/spanda-error/: Cargo.toml
crates/spanda-error/src/: lib.rs
crates/spanda-estimate/: Cargo.toml
crates/spanda-estimate/src/: estimate.rs  lib.rs
crates/spanda-estimate/tests/: estimate_tests.rs
crates/spanda-explain/: Cargo.toml
crates/spanda-explain/src/: explain.rs
crates/spanda-explain/tests/: explain_tests.rs
crates/spanda-ffi/: Cargo.toml
crates/spanda-ffi/src/: lib.rs
crates/spanda-fleet/: Cargo.toml
crates/spanda-fleet/src/: agent.rs  continuity_agent.rs  lib.rs  mesh.rs  recovery_agent.rs  recovery_mesh.rs  remote.rs  swarm_continuity.rs  tamper_mesh.rs  telemetry_mesh.rs
crates/spanda-fleet/tests/: mesh_integration.rs  recovery_runtime.rs  swarm_mesh.rs
crates/spanda-hal/: Cargo.toml
crates/spanda-hal/src/: hal.rs  hardware_monitor.rs  lib.rs  soc.rs
crates/spanda-hardware/: Cargo.toml  README.md
crates/spanda-hardware/src/: compat.rs  connectivity_validate.rs  lib.rs  profiles.rs  verify.rs
crates/spanda-interpreter/: Cargo.toml  README.md
crates/spanda-interpreter/src/: fleet_http.rs  lib.rs  options.rs  platform_events.rs  run.rs
crates/spanda-interpreter/tests/: continuity_runtime.rs  (+7 more)
crates/spanda-lib-registry/: Cargo.toml
crates/spanda-llvm/: Cargo.toml  README.md
crates/spanda-ota/: Cargo.toml  README.md
crates/spanda-package/: Cargo.toml  README.md
crates/spanda-plugin/: Cargo.toml
crates/spanda-providers/: Cargo.toml  README.md
crates/spanda-readiness/: Cargo.toml
crates/spanda-regex-lang/: Cargo.toml
crates/spanda-runtime-host/: Cargo.toml
crates/spanda-score/: Cargo.toml
crates/spanda-sdk/: Cargo.toml  README.md
(+809 files in other folders)
