[workspace]
members = [
    "crates/spanda-core",
    "crates/spanda-audit",
    "crates/spanda-security",
    "crates/spanda-package",
    "crates/spanda-cli",
    "crates/spanda-dap",
    "crates/spanda-node",
    "crates/spanda-wasm",
    "crates/spanda-llvm",
    "crates/spanda-rt",
    "crates/spanda-transport-mqtt",
    "crates/spanda-transport-ros2",
    "crates/spanda-connectivity",
    "crates/spanda-transport-dds",
    "crates/spanda-transport-websocket",
    "crates/spanda-deploy-http",
    "crates/spanda-fleet",
    "crates/spanda-ota",
]
exclude = ["crates/spanda-ros2-rclrs-native"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Davalgi/Spanda"
license = "Apache-2.0"
authors = ["Sujay Davalgi <sujay@davalgi.com>"]
homepage = "https://github.com/Davalgi/Spanda"
description = "Spanda — safety-first language for robotics and autonomous systems"

[profile.release]
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
