[package]
name = "spanda-bridge"
version = "0.1.0"
edition = "2021"
description = "Spanda Python and C++ extern function bridges"
build = "build.rs"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-ast = { path = "../spanda-ast" }
spanda-error = { path = "../spanda-error" }
spanda-ffi = { path = "../spanda-ffi" }
spanda-runtime = { path = "../spanda-runtime" }
pyo3 = { version = "0.29", optional = true, features = ["auto-initialize", "abi3-py310"] }

[features]
default = []
python-native = ["dep:pyo3"]
cpp-native = []
