[package]
name = "spanda-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Spanda native CLI (check / run / sim with JSON output)"
readme = "../../README.md"

[[bin]]
name = "spanda"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "A9E1251D-7646-466A-A79F-710DB9C62AA3"
path-guid = "003EC466-FDCC-4BFB-8A46-71D8540816E8"
license = false
eula = false

[dependencies]
spanda-ast = { path = "../spanda-ast" }
spanda-certify = { path = "../spanda-certify" }
spanda-codegen = { path = "../spanda-codegen" }
spanda-deploy-http = { path = "../spanda-deploy-http" }
spanda-debug = { path = "../spanda-debug" }
spanda-docs = { path = "../spanda-docs" }
spanda-driver = { path = "../spanda-driver" }
spanda-error = { path = "../spanda-error" }
spanda-fleet = { path = "../spanda-fleet" }
spanda-format = { path = "../spanda-format" }
spanda-hardware = { path = "../spanda-hardware" }
spanda-lint = { path = "../spanda-lint" }
spanda-llvm = { path = "../spanda-llvm", optional = true }
spanda-modules = { path = "../spanda-modules" }
spanda-ota = { path = "../spanda-ota" }
spanda-package = { path = "../spanda-package" }
spanda-parser = { path = "../spanda-parser" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-security = { path = "../spanda-security" }
spanda-sir = { path = "../spanda-sir" }
spanda-typecheck = { path = "../spanda-typecheck" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["llvm"]
llvm = ["dep:spanda-llvm"]
slim = []

[dev-dependencies]
serde_json = "1"
tempfile = "3"
