[package]
name = "spanda"
version.workspace = true
include = [
    "src/**/*",
    "bundled-examples/**/*",
    "bundled-registry/**/*",
    "Cargo.toml",
    "README.md",
]
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Spanda native CLI (check / run / sim with JSON output)"
readme = "../../README.md"

[[bin]]
name = "spanda"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "A9E1251D-7646-466A-A79F-710DB9C62AA3"
path-guid = "003EC466-FDCC-4BFB-8A46-71D8540816E8"
license = false
eula = false

[dependencies]
spanda-api = { path = "../spanda-api" }
spanda-ops = { path = "../spanda-ops" }
spanda-ast = { path = "../spanda-ast" }
spanda-comm = { path = "../spanda-comm" }
spanda-certify = { path = "../spanda-certify" }
spanda-codegen = { path = "../spanda-codegen" }
spanda-deploy-http = { path = "../spanda-deploy-http" }
spanda-debug = { path = "../spanda-debug" }
spanda-docs = { path = "../spanda-docs" }
spanda-driver = { path = "../spanda-driver" }
spanda-error = { path = "../spanda-error" }
spanda-fleet = { path = "../spanda-fleet" }
spanda-format = { path = "../spanda-format" }
spanda-lexer = { path = "../spanda-lexer" }
spanda-hardware = { path = "../spanda-hardware" }
spanda-capability = { path = "../spanda-capability" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-config = { path = "../spanda-config" }
spanda-runtime-faults = { path = "../spanda-runtime-faults" }
spanda-assurance = { path = "../spanda-assurance", features = ["certify-runtime"] }
spanda-contract = { path = "../spanda-contract" }
spanda-explain = { path = "../spanda-explain" }
spanda-graph = { path = "../spanda-graph" }
spanda-threat = { path = "../spanda-threat" }
spanda-diff = { path = "../spanda-diff" }
spanda-score = { path = "../spanda-score" }
spanda-policy = { path = "../spanda-policy" }
spanda-chaos = { path = "../spanda-chaos" }
spanda-estimate = { path = "../spanda-estimate" }
spanda-compliance = { path = "../spanda-compliance" }
spanda-generate = { path = "../spanda-generate" }
spanda-adr = { path = "../spanda-adr" }
spanda-tamper = { path = "../spanda-tamper" }
spanda-trust = { path = "../spanda-trust" }
spanda-spoofing = { path = "../spanda-spoofing" }
spanda-decision = { path = "../spanda-decision" }
spanda-telemetry-store = { path = "../spanda-telemetry-store", features = ["sqlite", "push"] }
spanda-lint = { path = "../spanda-lint" }
spanda-lib-registry = { path = "../spanda-lib-registry" }
spanda-runtime-host = { path = "../spanda-runtime-host" }
spanda-llvm = { path = "../spanda-llvm", optional = true }
spanda-modules = { path = "../spanda-modules" }
spanda-ota = { path = "../spanda-ota" }
spanda-package = { path = "../spanda-package" }
spanda-parser = { path = "../spanda-parser" }
spanda-providers = { path = "../spanda-providers" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-security = { path = "../spanda-security" }
spanda-transport-routing = { path = "../spanda-transport-routing", default-features = false }
spanda-sir = { path = "../spanda-sir" }
spanda-typecheck = { path = "../spanda-typecheck" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["llvm"]
llvm = ["dep:spanda-llvm"]
slim = []
transport-tls = ["spanda-transport-routing/transport-tls"]
live-mqtt = ["spanda-transport-routing/live-mqtt"]
live-websocket = ["spanda-transport-routing/live-websocket"]
live-dds = ["spanda-transport-routing/live-dds"]
live-transport = ["live-mqtt", "live-websocket", "live-dds"]
live-iot = ["spanda-providers/live-iot"]
live-ai = ["spanda-driver/live-ai"]
cpp-native = ["spanda-driver/cpp-native"]
python-native = ["spanda-driver/python-native"]

[dev-dependencies]
serde_json = "1"
tempfile = "3"
