[package]
name = "spanda-compliance"
version.workspace = true
edition.workspace = true
description = "Industry compliance profile verification for Spanda programs"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spanda-ast = { path = "../spanda-ast" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-tamper = { path = "../spanda-tamper" }

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
