[package]
name = "spanda-config"
version.workspace = true
edition = "2021"
description = "Cascading TOML configuration resolution, device tree, and validation for Spanda autonomous systems"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
spanda-hardware = { path = "../spanda-hardware" }
spanda-package = { path = "../spanda-package" }
spanda-ast = { path = "../spanda-ast" }

[dev-dependencies]
tempfile = "3"
