[package]
name = "spanda-core"
version = "0.1.0"
edition = "2021"
description = "Spanda robotics language — lexer, parser, type checker, and interpreter"
build = "build.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
spanda-audit = { path = "../spanda-audit" }
spanda-security = { path = "../spanda-security" }
hex = "0.4"
rustls-pemfile = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "0.26"
sha2 = "0.10"
spanda-transport-mqtt = { path = "../spanda-transport-mqtt" }
spanda-transport-ros2 = { path = "../spanda-transport-ros2" }
spanda-connectivity = { path = "../spanda-connectivity" }
spanda-transport-dds = { path = "../spanda-transport-dds" }
spanda-transport-websocket = { path = "../spanda-transport-websocket" }
spanda-deploy-http = { path = "../spanda-deploy-http" }
spanda-fleet = { path = "../spanda-fleet" }
spanda-ota = { path = "../spanda-ota" }
spanda-hardware = { path = "../spanda-hardware" }
pyo3 = { version = "0.23", optional = true, features = ["auto-initialize", "abi3-py310"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.8"

[features]
default = []
live-mqtt = ["spanda-transport-mqtt/live"]
live-websocket = ["spanda-transport-websocket/live"]
live-dds = ["spanda-transport-dds/live"]
live-transport = ["live-mqtt", "live-websocket", "live-dds"]
python-native = ["dep:pyo3"]
cpp-native = []

[dev-dependencies]
glob = "0.3"
spanda-package = { path = "../spanda-package" }
