[package]
name = "spanda-core"
version = "0.1.0"
edition = "2021"
description = "Spanda robotics language — lexer, parser, type checker, and interpreter"
build = "build.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
spanda-audit = { path = "../spanda-audit" }
spanda-security = { path = "../spanda-security" }
sha2 = "0.10"
spanda-transport-mqtt = { path = "../spanda-transport-mqtt" }
spanda-transport-ros2 = { path = "../spanda-transport-ros2" }
spanda-connectivity = { path = "../spanda-connectivity" }
spanda-transport-dds = { path = "../spanda-transport-dds" }
spanda-transport-websocket = { path = "../spanda-transport-websocket" }
spanda-deploy-http = { path = "../spanda-deploy-http" }
spanda-fleet = { path = "../spanda-fleet" }
spanda-ota = { path = "../spanda-ota" }
spanda-hardware = { path = "../spanda-hardware" }
spanda-ast = { path = "../spanda-ast" }
spanda-lexer = { path = "../spanda-lexer" }
spanda-typecheck = { path = "../spanda-typecheck" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-comm = { path = "../spanda-comm" }
spanda-safety = { path = "../spanda-safety" }
spanda-hal = { path = "../spanda-hal" }
spanda-error = { path = "../spanda-error" }
spanda-ai = { path = "../spanda-ai" }
spanda-providers = { path = "../spanda-providers" }
spanda-concurrency = { path = "../spanda-concurrency" }
spanda-debug = { path = "../spanda-debug" }
spanda-transport-routing = { path = "../spanda-transport-routing" }
spanda-transport = { path = "../spanda-transport" }
spanda-regex-lang = { path = "../spanda-regex-lang" }
spanda-lib-registry = { path = "../spanda-lib-registry" }
spanda-connectivity-runtime = { path = "../spanda-connectivity-runtime" }
spanda-runtime-host = { path = "../spanda-runtime-host" }
spanda-ffi = { path = "../spanda-ffi" }
spanda-interpreter = { path = "../spanda-interpreter" }
pyo3 = { version = "0.29", optional = true, features = ["auto-initialize", "abi3-py310"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.8"

[features]
default = []
live-mqtt = ["spanda-transport-mqtt/live"]
live-websocket = ["spanda-transport-websocket/live"]
live-dds = ["spanda-transport-dds/live"]
live-transport = ["live-mqtt", "live-websocket", "live-dds"]
python-native = ["dep:pyo3"]
cpp-native = []

[dev-dependencies]
glob = "0.3"
spanda-package = { path = "../spanda-package" }
