[package]
name = "spanda-core"
version = "0.1.0"
edition = "2021"
description = "Spanda robotics language — facade, deploy tooling, and compatibility shims"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
spanda-audit = { path = "../spanda-audit" }
spanda-security = { path = "../spanda-security" }
sha2 = "0.10"
spanda-connectivity = { path = "../spanda-connectivity" }
spanda-deploy-http = { path = "../spanda-deploy-http", optional = true }
spanda-fleet = { path = "../spanda-fleet", optional = true }
spanda-ota = { path = "../spanda-ota", optional = true }
spanda-hardware = { path = "../spanda-hardware" }
spanda-ast = { path = "../spanda-ast" }
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
spanda-driver = { path = "../spanda-driver" }
spanda-sir = { path = "../spanda-sir" }
spanda-format = { path = "../spanda-format" }
spanda-lint = { path = "../spanda-lint" }
spanda-codegen = { path = "../spanda-codegen" }
spanda-modules = { path = "../spanda-modules" }
spanda-docs = { path = "../spanda-docs" }
spanda-certify = { path = "../spanda-certify", optional = true }
spanda-bridge = { path = "../spanda-bridge", optional = true }
spanda-typecheck = { path = "../spanda-typecheck" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-comm = { path = "../spanda-comm" }
spanda-safety = { path = "../spanda-safety" }
spanda-hal = { path = "../spanda-hal" }
spanda-error = { path = "../spanda-error" }
spanda-ai = { path = "../spanda-ai" }
spanda-providers = { path = "../spanda-providers" }
spanda-concurrency = { path = "../spanda-concurrency" }
spanda-debug = { path = "../spanda-debug" }
spanda-regex-lang = { path = "../spanda-regex-lang" }
spanda-lib-registry = { path = "../spanda-lib-registry" }
spanda-connectivity-runtime = { path = "../spanda-connectivity-runtime" }
spanda-runtime-host = { path = "../spanda-runtime-host" }
spanda-ffi = { path = "../spanda-ffi", optional = true }
spanda-interpreter = { path = "../spanda-interpreter" }
pyo3 = { version = "0.29", optional = true, features = ["auto-initialize", "abi3-py310"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.8"

[features]
default = ["full"]
full = ["ota", "fleet", "certify", "bridge"]
ota = ["dep:spanda-ota", "dep:spanda-deploy-http"]
fleet = ["dep:spanda-fleet"]
certify = ["dep:spanda-certify"]
bridge = ["dep:spanda-bridge", "dep:spanda-ffi"]
python-native = ["bridge", "spanda-bridge/python-native"]
cpp-native = ["bridge", "spanda-bridge/cpp-native"]

[dev-dependencies]
glob = "0.3"
spanda-capability = { path = "../spanda-capability" }
spanda-package = { path = "../spanda-package" }
spanda-transport = { path = "../spanda-transport" }
spanda-transport-routing = { path = "../spanda-transport-routing" }
spanda-transport-ros2 = { path = "../spanda-transport-ros2" }

[[test]]
name = "p3_features"
path = "tests/p3_features.rs"
required-features = ["bridge"]
