[package]
name = "spanda-dap"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Debug Adapter Protocol server for Spanda"

[[bin]]
name = "spanda-dap"
path = "src/main.rs"

[package.metadata.dist]
dist = false

[dependencies]
spanda-debug = { path = "../spanda-debug" }
spanda-driver = { path = "../spanda-driver" }
spanda-error = { path = "../spanda-error" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
