[package]
name = "spanda-explain"
version.workspace = true
edition.workspace = true
description = "Explainability reports for Spanda programs, verification, and traces"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-ast = { path = "../spanda-ast" }
spanda-assurance = { path = "../spanda-assurance" }
spanda-contract = { path = "../spanda-contract" }
spanda-decision = { path = "../spanda-decision" }
spanda-hardware = { path = "../spanda-hardware" }
spanda-config = { path = "../spanda-config" }
spanda-package = { path = "../spanda-package" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-tamper = { path = "../spanda-tamper" }
spanda-trust = { path = "../spanda-trust" }

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
