[package]
name = "spanda-fleet"
version.workspace = true
edition.workspace = true
description = "Fleet peer relay agents and mesh coordination for Spanda"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
spanda-ast = { path = "../spanda-ast" }
spanda-assurance = { path = "../spanda-assurance" }
spanda-deploy-http = { path = "../spanda-deploy-http" }
spanda-interpreter = { path = "../spanda-interpreter", default-features = false, features = ["transport-tls"] }
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-tamper = { path = "../spanda-tamper" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-telemetry-store = { path = "../spanda-telemetry-store", default-features = false }

[dev-dependencies]
spanda-deploy-http = { path = "../spanda-deploy-http" }
spanda-driver = { path = "../spanda-driver" }
