[package]
name = "spanda-fleet"
version.workspace = true
edition.workspace = true
description = "Fleet peer relay agents and mesh coordination for Spanda"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
spanda-ast = { path = "../spanda-ast" }
spanda-deploy-http = { path = "../spanda-deploy-http" }
spanda-interpreter = { path = "../spanda-interpreter", default-features = false }
spanda-transport-routing = { path = "../spanda-transport-routing", default-features = false, features = ["transport-tls"] }
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
spanda-runtime = { path = "../spanda-runtime" }

[dev-dependencies]
spanda-deploy-http = { path = "../spanda-deploy-http" }
spanda-driver = { path = "../spanda-driver" }
spanda-tamper = { path = "../spanda-tamper" }
spanda-telemetry-store = { path = "../spanda-telemetry-store", default-features = false }
