[package]
name = "spanda-hardware"
version.workspace = true
edition.workspace = true
description = "Builtin hardware profile catalog for Spanda package validation and verify"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
spanda-ast = { path = "../spanda-ast" }
spanda-comm = { path = "../spanda-comm" }
spanda-connectivity = { path = "../spanda-connectivity" }
spanda-connectivity-runtime = { path = "../spanda-connectivity-runtime" }

[dev-dependencies]
spanda-driver = { path = "../spanda-driver" }
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
