[package]
name = "spanda-interpreter"
version.workspace = true
edition.workspace = true
description = "Spanda interpreter staging crate — public run API re-exported from spanda-core"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
spanda-ast = { path = "../spanda-ast" }
spanda-audit = { path = "../spanda-audit" }
spanda-connectivity = { path = "../spanda-connectivity" }
spanda-comm = { path = "../spanda-comm" }
spanda-safety = { path = "../spanda-safety" }
spanda-hal = { path = "../spanda-hal" }
spanda-error = { path = "../spanda-error" }
spanda-ai = { path = "../spanda-ai" }
spanda-providers = { path = "../spanda-providers" }
spanda-concurrency = { path = "../spanda-concurrency" }
spanda-debug = { path = "../spanda-debug" }
spanda-regex-lang = { path = "../spanda-regex-lang" }
spanda-lib-registry = { path = "../spanda-lib-registry" }
spanda-connectivity-runtime = { path = "../spanda-connectivity-runtime" }
spanda-runtime-host = { path = "../spanda-runtime-host" }
spanda-ffi = { path = "../spanda-ffi" }
spanda-core = { path = "../spanda-core" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-security = { path = "../spanda-security" }
spanda-transport-routing = { path = "../spanda-transport-routing" }
spanda-transport = { path = "../spanda-transport" }
spanda-typecheck = { path = "../spanda-typecheck" }
