[package]
name = "spanda-interpreter"
version.workspace = true
edition.workspace = true
description = "Spanda tree-walking interpreter — native runtime, run_program, and simulator"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
spanda-ast = { path = "../spanda-ast" }
spanda-audit = { path = "../spanda-audit" }
spanda-connectivity = { path = "../spanda-connectivity" }
spanda-comm = { path = "../spanda-comm" }
spanda-safety = { path = "../spanda-safety" }
spanda-hal = { path = "../spanda-hal" }
spanda-error = { path = "../spanda-error" }
spanda-ai = { path = "../spanda-ai" }
spanda-concurrency = { path = "../spanda-concurrency" }
spanda-debug = { path = "../spanda-debug" }
spanda-regex-lang = { path = "../spanda-regex-lang" }
spanda-lib-registry = { path = "../spanda-lib-registry" }
spanda-connectivity-runtime = { path = "../spanda-connectivity-runtime" }
spanda-runtime-host = { path = "../spanda-runtime-host" }
spanda-ffi = { path = "../spanda-ffi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-runtime = { path = "../spanda-runtime" }
spanda-typecheck = { path = "../spanda-typecheck" }
spanda-deploy-http = { path = "../spanda-deploy-http", optional = true }

[features]
default = []
fleet-http = ["dep:spanda-deploy-http"]
live-ai = []

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
