[package]
name = "spanda-llvm"
version = "0.1.0"
edition = "2021"
description = "Spanda SIR → LLVM IR emitter (Milestone 2 foundation)"

[dependencies]
spanda-ast = { path = "../spanda-ast" }
spanda-driver = { path = "../spanda-driver" }
spanda-sir = { path = "../spanda-sir" }

[dev-dependencies]
spanda-driver = { path = "../spanda-driver" }
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
spanda-rt = { path = "../spanda-rt" }
